[package]
name = "rltk"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "A CP437/ASCII terminal library and helpers to make creating roguelike games in Rust easy. Similar to libtcod, but aiming to be Rust-native."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "cp437", "ascii", "virtual-terminal", "gamedev"]
categories = ["game-engines", "graphics"]
license = "MIT"
resolver = "2"                                                                                                                                              # Enables the new Cargo resolution engine

[features]
default = ["opengl"]
bevy = ["bracket-lib/bevy"]
specs = ["bracket-lib/specs"]
serde = ["bracket-lib/serde"]
threaded = ["bracket-lib/threaded"]
opengl = ["bracket-lib/opengl"]
curses = ["bracket-lib/curses"]
crossterm = ["bracket-lib/crossterm"]
webgpu = ["bracket-lib/webgpu"]

[dependencies]
bracket-lib = { path = "../", version = "~0.8", default-features = false }

[dev-dependencies]
